cmake: add gdc support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,24 +18,95 @@ endif()
 
 pico_sdk_init()
 
-execute_process(COMMAND which ldc2 OUTPUT_VARIABLE DC OUTPUT_STRIP_TRAILING_WHITESPACE)
+option(BETTERC "Enable BetterC mode" OFF)
+
+set(D_FLAGS "")
+
+if(DEFINED ENV{DC})
+    set(DC $ENV{DC})
+else()
+    message(FATAL_ERROR "DC is not defined. Please set it to the path of the D compiler.")
+endif()
+
 
 if(PICO_PLATFORM STREQUAL "rp2350-arm-s")
     message(STATUS "PICO_PLATFORM is set to rp2350-arm-s, using armv7em")
     set(D_TARGET "arm-unknown-unknown-eabi")
     set(D_CPU "cortex-m0plus")
-    list(APPEND CLANG_ARCH_ABI_FLAGS "--float-abi=soft")
 elseif(PICO_PLATFORM STREQUAL "rp2040")
     message(STATUS "PICO_PLATFORM is set to RP2040, using armv6m")
     set(D_TARGET "arm-unknown-unknown-eabi")
     set(D_CPU "cortex-m0")
-    list(APPEND CLANG_ARCH_ABI_FLAGS "--float-abi=soft")
 elseif(PICO_PLATFORM STREQUAL "rp2350-riscv")
     message(STATUS "PICO_PLATFORM is set to rp2350-riscv, using riscv32.")
     set(D_TARGET "riscv32-unknown-unknown-eabi")
     set(D_CPU "generic-rv32")
-    list(APPEND CLANG_ARCH_ABI_FLAGS "-mattr=+m,+a,+c,+zicsr,+zifencei,+zba,+zbb,+zbs,+zbkb" "-mabi=ilp32")
 endif()
+
+if(DC MATCHES ".*ldc2.*")
+    list(APPEND D_FLAGS "-preview=all")
+    list(APPEND D_FLAGS "-Xcc=-fshort-enums")
+    list(APPEND D_FLAGS "--verrors-context")
+    list(APPEND D_FLAGS "--boundscheck=on")
+    list(APPEND D_FLAGS "--allinst")
+    list(APPEND D_FLAGS "--linkonce-templates")
+    list(APPEND D_FLAGS "-mtriple=${D_TARGET}")
+
+    if(CMAKE_BULD_TYPE MATCHES "Debug")
+        list(APPEND D_FLAGS "-Og")
+    else()
+        list(APPEND D_FLAGS "-O")
+    endif()
+    if(BETTERC)
+        list(APPEND D_FLAGS "-betterC")
+    else()
+        list(APPEND D_FLAGS "--fno-moduleinfo")
+    endif()
+    if(PICO_PLATFORM STREQUAL "rp2350-riscv")
+        list(APPEND D_FLAGS "-mattr=+i,+m,+a,+c,+zicsr,+zifencei,+zba,+zbb,+zbs,+zbkb" "-mabi=ilp32")
+    else()
+        list(APPEND D_FLAGS "--float-abi=soft")
+    endif()
+
+    list(APPEND D_FLAGS "-of=${CMAKE_CURRENT_BINARY_DIR}/_dcode.o")
+elseif(DC MATCHES ".*gdc.*")
+    list(APPEND D_FLAGS "-fpreview=all")
+    list(APPEND D_FLAGS "-fbounds-check")
+    list(APPEND D_FLAGS "-fall-instantiations")
+    list(APPEND D_FLAGS "-fshort-enums")
+
+    if(CMAKE_BULD_TYPE MATCHES "Debug")
+        list(APPEND D_FLAGS "-Og")
+        list(APPEND D_FLAGS "-fdebug")
+    else()
+        list(APPEND D_FLAGS "-O3")
+    endif()
+    if(BETTERC)
+        list(APPEND D_FLAGS "-fno-druntime")
+    else()
+        list(APPEND D_FLAGS "-fno-moduleinfo")
+    endif()
+    if(PICO_PLATFORM STREQUAL "rp2350-riscv")
+        list(APPEND D_FLAGS "-march=rv32imac_zicsr_zifencei_zba_zbb_zbs_zbkb")
+        list(APPEND D_FLAGS "-mabi=ilp32")
+    else()
+        list(APPEND D_FLAGS "-marm")
+        list(APPEND D_FLAGS "-mfloat-abi=soft")
+        if(PICO_PLATFORM STREQUAL "rp2040")
+            list(APPEND D_FLAGS "-march=armv6-m")
+        else()
+            list(APPEND D_FLAGS "-march=armv7e-m")
+        endif()
+    endif()
+
+    list(APPEND D_FLAGS "-o")
+    list(APPEND D_FLAGS "${CMAKE_CURRENT_BINARY_DIR}/_dcode.o")
+elseif(DC MATCHES ".*dmd.*")
+    message(FATAL_ERROR "DMD does not support rp2040.")
+else()
+    message(FATAL_ERROR "Unknown D compiler: ${DC}")
+endif()
+list(APPEND D_FLAGS "-mcpu=${D_CPU}")
 
 add_executable(${PROJECT_NAME})
 
@@ -94,15 +165,14 @@ add_custom_command(
     OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/_dcode.o
     COMMAND
     ${DC}
-    -i --verrors-context -preview=all
-    -mtriple=${D_TARGET} -mcpu=${D_CPU} -Xcc=-fshort-enums
+    -i -c
+    ${D_FLAGS}
     ${COMPILE_DEFINITIONS}
     ${CLANG_ARCH_ABI_FLAGS}
     $$\( echo '$<TARGET_PROPERTY:${PROJECT_NAME},INCLUDE_DIRECTORIES>' | tr '\;' '\\n' | sed -e 's/\\\(.*\\\)/-P-I\\1/g' \)
     $$\( echo '${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES}' | tr ' ' '\\n' | sed -e 's/\\\(.*\\\)/-P-I\\1/g' \)
     ${CMAKE_CURRENT_LIST_DIR}/sample/app.d
-    -betterC -O -I${CMAKE_CURRENT_LIST_DIR}/source
-    -c -of=${CMAKE_CURRENT_BINARY_DIR}/_dcode.o
+    -I${CMAKE_CURRENT_LIST_DIR}/source
     DEPENDS
     ${CMAKE_CURRENT_LIST_DIR}/sample/app.d
 )
