CMake:fix LDC2 arm32 mcpu target
rp2040 is cortex-m0plus
rp2350 ia cortex-m33

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,11 +32,11 @@ endif()
 if(PICO_PLATFORM STREQUAL "rp2350-arm-s")
     message(STATUS "PICO_PLATFORM is set to rp2350-arm-s, using armv7em")
     set(D_TARGET "arm-unknown-unknown-eabi")
-    set(D_CPU "cortex-m0plus")
+    set(D_CPU "cortex-33")
 elseif(PICO_PLATFORM STREQUAL "rp2040")
     message(STATUS "PICO_PLATFORM is set to RP2040, using armv6m")
     set(D_TARGET "arm-unknown-unknown-eabi")
-    set(D_CPU "cortex-m0")
+    set(D_CPU "cortex-m0plus")
 elseif(PICO_PLATFORM STREQUAL "rp2350-riscv")
     message(STATUS "PICO_PLATFORM is set to rp2350-riscv, using riscv32.")
     set(D_TARGET "riscv32-unknown-unknown-eabi")
