fix target rp2350

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ pico_sdk_init()
 if(PICO_PLATFORM STREQUAL "rp2350-arm-s")
     message(STATUS "PICO_PLATFORM is set to rp2350-arm-s, using armv7em")
     set(D_TARGET "arm-unknown-unknown-eabi")
-    set(D_CPU "cortex-33")
+    set(D_CPU "cortex-m33")
 elseif(PICO_PLATFORM STREQUAL "rp2040")
     message(STATUS "PICO_PLATFORM is set to RP2040, using armv6m")
     set(D_TARGET "arm-unknown-unknown-eabi")
