--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,13 +31,13 @@ jobs:
             if [ "$RUNNER_ARCH" == "X64" ]; then
               curl -sLO https://github.com/xpack-dev-tools/riscv-none-elf-gcc-xpack/releases/download/v14.2.0-2/xpack-riscv-none-elf-gcc-14.2.0-2-linux-x64.tar.gz
               tar -xvf xpack-riscv-none-elf-gcc-14.2.0-2-linux-x64.tar.gz
-              echo "$PWD/xpack-riscv-none-elf-gcc-14.2.0-2-linux-x64/bin" >> $GITHUB_PATH
+              echo "$PWD/xpack-riscv-none-elf-gcc-14.2.0-2/bin" >> $GITHUB_PATH
             fi
           elif [ "$RUNNER_OS" == "macOS" ]; then
             if [ "$RUNNER_ARCH" == "ARM64" ]; then
               curl -sLO https://github.com/xpack-dev-tools/riscv-none-elf-gcc-xpack/releases/download/v14.2.0-2/xpack-riscv-none-elf-gcc-14.2.0-2-darwin-arm64.tar.gz
               tar -xvf xpack-riscv-none-elf-gcc-14.2.0-2-darwin-arm64.tar.gz
-              echo "$PWD/xpack-riscv-none-elf-gcc-14.2.0-2-darwin-arm64/bin" >> $GITHUB_PATH
+              echo "$PWD/xpack-riscv-none-elf-gcc-14.2.0-2/bin" >> $GITHUB_PATH
             fi
           fi
       - name: Get pico-sdk 
@@ -73,13 +73,13 @@ jobs:
             if [ "$RUNNER_ARCH" == "X64" ]; then
               curl -sLO https://github.com/xpack-dev-tools/riscv-none-elf-gcc-xpack/releases/download/v14.2.0-2/xpack-riscv-none-elf-gcc-14.2.0-2-linux-x64.tar.gz
               tar -xvf xpack-riscv-none-elf-gcc-14.2.0-2-linux-x64.tar.gz
-              echo "$PWD/xpack-riscv-none-elf-gcc-14.2.0-2-linux-x64/bin" >> $GITHUB_PATH
+              echo "$PWD/xpack-riscv-none-elf-gcc-14.2.0-2/bin" >> $GITHUB_PATH
             fi
           elif [ "$RUNNER_OS" == "macOS" ]; then
             if [ "$RUNNER_ARCH" == "ARM64" ]; then
               curl -sLO https://github.com/xpack-dev-tools/riscv-none-elf-gcc-xpack/releases/download/v14.2.0-2/xpack-riscv-none-elf-gcc-14.2.0-2-darwin-arm64.tar.gz
               tar -xvf xpack-riscv-none-elf-gcc-14.2.0-2-darwin-arm64.tar.gz
-              echo "$PWD/xpack-riscv-none-elf-gcc-14.2.0-2-darwin-arm64/bin" >> $GITHUB_PATH
+              echo "$PWD/xpack-riscv-none-elf-gcc-14.2.0-2/bin" >> $GITHUB_PATH
             fi
           fi
       - name: Get pico-sdk 
