--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ elseif(PICO_PLATFORM STREQUAL "rp2040")
     message(STATUS "PICO_PLATFORM is set to RP2040, using armv6m")
     set(D_TARGET "arm-unknown-unknown-eabi")
     set(D_CPU "cortex-m0plus")
+    set(APPEND D_FLAGS "--d-version=RP2040")
 elseif(PICO_PLATFORM STREQUAL "rp2350-riscv")
     message(STATUS "PICO_PLATFORM is set to rp2350-riscv, using riscv32.")
     set(D_TARGET "riscv32-unknown-unknown-eabi")
