--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,6 @@ elseif(PICO_PLATFORM STREQUAL "rp2040")
     message(STATUS "PICO_PLATFORM is set to RP2040, using armv6m")
     set(D_TARGET "arm-unknown-unknown-eabi")
     set(D_CPU "cortex-m0plus")
-    set(APPEND D_FLAGS "--d-version=RP2040")
 elseif(PICO_PLATFORM STREQUAL "rp2350-riscv")
     message(STATUS "PICO_PLATFORM is set to rp2350-riscv, using riscv32.")
     set(D_TARGET "riscv32-unknown-unknown-eabi")
@@ -71,6 +70,9 @@ if(DC MATCHES ".*ldc2$")
         list(APPEND D_FLAGS "-mattr=+i,+m,+a,+c,+zicsr,+zifencei,+zba,+zbb,+zbs,+zbkb" "-mabi=ilp32")
     else()
         list(APPEND D_FLAGS "--float-abi=soft")
+    endif()
+    if(PICO_PLATFORM STREQUAL "rp2040")
+        list(APPEND D_FLAGS "--d-version=RP2040")
     endif()
 
     list(APPEND D_FLAGS "-of=${CMAKE_CURRENT_BINARY_DIR}/_dcode.o")
