--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,6 @@ jobs:
       - uses: lukka/get-cmake@latest
         with:
           cmakeVersion: latest
-          ninjaVersion: latest
       - name: Get riscv32 toolchain
         if: startsWith(matrix.platform, 'rp2350-riscv') 
         run: |
@@ -43,7 +42,7 @@ jobs:
       - name: Get pico-sdk 
         run: git clone --recursive --depth=1 -b 2.0.0 https://github.com/raspberrypi/pico-sdk.git
       - name: CMake Configure 
-        run: PICO_SDK_PATH=$PWD/pico-sdk PICO_PLATFORM=${{ matrix.platform }} cmake -GNinja -B build -DCMAKE_BUILD_TYPE=Release
+        run: PICO_SDK_PATH=$PWD/pico-sdk PICO_PLATFORM=${{ matrix.platform }} cmake -B build -DCMAKE_BUILD_TYPE=Release
       - name: CMake Build 
         run: cmake --build build/ --parallel
       # - uses: wokwi/wokwi-ci-action@v1
@@ -85,6 +84,6 @@ jobs:
       - name: Get pico-sdk 
         run: git clone --recursive --depth=1 -b 2.0.0 https://github.com/raspberrypi/pico-sdk.git
       - name: CMake Configure 
-        run: DC=ldc2 PICO_SDK_PATH=$PWD/pico-sdk PICO_PLATFORM=${{ matrix.platform }} cmake -GNinja -B build -DCMAKE_BUILD_TYPE=Release
+        run: DC=ldc2 PICO_SDK_PATH=$PWD/pico-sdk PICO_PLATFORM=${{ matrix.platform }} cmake -B build -DCMAKE_BUILD_TYPE=Release
       - name: CMake Build 
         run: cmake --build build/ --parallel
