--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,8 @@ jobs:
               echo "$PWD/xpack-riscv-none-elf-gcc-14.2.0-2/bin" >> $GITHUB_PATH
             fi
           fi
-          cp $PWD/xpack-riscv-none-elf-gcc-14.2.0-2/bin/riscv-none-elf-* $PWD/xpack-riscv-none-elf-gcc-14.2.0-2/bin/riscv32-unknown-elf-*
+          cp $PWD/xpack-riscv-none-elf-gcc-14.2.0-2/bin/riscv-none-elf-gcc $PWD/xpack-riscv-none-elf-gcc-14.2.0-2/bin/riscv32-unknown-elf-gcc
+          cp $PWD/xpack-riscv-none-elf-gcc-14.2.0-2/bin/riscv-none-elf-g++ $PWD/xpack-riscv-none-elf-gcc-14.2.0-2/bin/riscv32-unknown-elf-g++
       - name: Get pico-sdk 
         run: git clone --recursive --depth=1 -b 2.0.0 https://github.com/raspberrypi/pico-sdk.git
       - name: CMake Configure 
