`PICO_GCC_TRIPLE` changed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ elseif(PICO_PLATFORM STREQUAL "rp2040")
     set(D_CPU "cortex-m0plus")
 elseif(PICO_PLATFORM STREQUAL "rp2350-riscv")
     message(STATUS "PICO_PLATFORM is set to rp2350-riscv, using riscv32.")
-    set(PICO_DEFAULT_GCC_TRIPLE riscv-none-elf riscv32-unknown-elf riscv32-corev-elf)
+    set(PICO_GCC_TRIPLE riscv-none-elf;riscv32-unknown-elf;riscv32-corev-elf)
     set(D_TARGET "riscv32-unknown-unknown-eabi")
     set(D_CPU "generic-rv32")
 endif()
