--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,8 @@ jobs:
               echo "$PWD/riscv-toolchain-14/bin" >> $GITHUB_PATH
             fi
           fi
-          export CC=riscv32-unknown-elf          
+          export CC=riscv32-unknown-elf-gcc
+          export CXX=riscv32-unknown-elf-g++
       - name: Get pico-sdk 
         run: git clone --recursive --depth=1 -b 2.0.0 https://github.com/raspberrypi/pico-sdk.git
       - name: CMake Configure 
