--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,12 +38,15 @@ jobs:
               echo "$PWD/riscv-toolchain-14/bin" >> $GITHUB_PATH
             fi
           fi
-          export CC=riscv32-unknown-elf-gcc
-          export CXX=riscv32-unknown-elf-g++
       - name: Get pico-sdk 
         run: git clone --recursive --depth=1 -b 2.0.0 https://github.com/raspberrypi/pico-sdk.git
       - name: CMake Configure 
-        run: PICO_SDK_PATH=$PWD/pico-sdk PICO_PLATFORM=${{ matrix.platform }} cmake -B build -GNinja -DCMAKE_BUILD_TYPE=Release
+        run: |
+          if [[ "${{ matrix.platform }}" == "rp2350-riscv" ]]; then
+            CC=riscv32-unknown-elf-gcc CXX=riscv32-unknown-elf-g++ PICO_SDK_PATH=$PWD/pico-sdk PICO_PLATFORM=${{ matrix.platform }} cmake -B build -GNinja -DCMAKE_BUILD_TYPE=Release
+          else
+            CC=arm-none-eabi-gcc CXX=arm-none-eabi-g++ PICO_SDK_PATH=$PWD/pico-sdk PICO_PLATFORM=${{ matrix.platform }} cmake -B build -GNinja -DCMAKE_BUILD_TYPE=Release
+          fi
       - name: CMake Build 
         run: cmake --build build/ --parallel
       # - uses: wokwi/wokwi-ci-action@v1
