`-DMBEDTLS_NO_PLATFORM_ENTROPY` to riscv

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ if(DC MATCHES ".*ldc2$")
         list(APPEND D_FLAGS "--fno-moduleinfo")
     endif()
     if(PICO_PLATFORM STREQUAL "rp2350-riscv")
+        list(APPEND D_FLAGS "-Xcc=-DMBEDTLS_NO_PLATFORM_ENTROPY")
         list(APPEND D_FLAGS "-mattr=+i,+m,+a,+c,+zicsr,+zifencei,+zba,+zbb,+zbs,+zbkb" "-mabi=ilp32")
     else()
         list(APPEND D_FLAGS "--float-abi=soft")
