ci: openD build disabled
Actually not suitable for current pico-sdk impl!
ref.: https://github.com/kassane/rp2040-dlang/issues/3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,22 +61,22 @@ jobs:
       #     timeout: 5000
       #     expect_text: 'Hello, world from D!'
 
-  opend:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: carlosperate/arm-none-eabi-gcc-action@v1
-      - uses: lukka/get-cmake@latest
-        with:
-          cmakeVersion: latest
-      - name: Install opend
-        run: |
-          curl -sLO https://github.com/opendlang/opend/releases/download/CI/opend-latest-linux-x86_64.tar.xz
-          tar -xf opend-latest-linux-x86_64.tar.xz
-          echo "$PWD/opend-latest-linux-x86_64/bin" >> $GITHUB_PATH
-      - name: Get pico-sdk 
-        run: git clone --recursive --depth=1 -b 2.0.0 https://github.com/raspberrypi/pico-sdk.git
-      - name: CMake Configure 
-        run: DC=ldc2 PICO_SDK_PATH=$PWD/pico-sdk PICO_PLATFORM=${{ matrix.platform }} cmake -B build -DCMAKE_BUILD_TYPE=Release
-      - name: CMake Build 
-        run: cmake --build build/ --parallel
+  # opend:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: carlosperate/arm-none-eabi-gcc-action@v1
+  #     - uses: lukka/get-cmake@latest
+  #       with:
+  #         cmakeVersion: latest
+  #     - name: Install opend
+  #       run: |
+  #         curl -sLO https://github.com/opendlang/opend/releases/download/CI/opend-latest-linux-x86_64.tar.xz
+  #         tar -xf opend-latest-linux-x86_64.tar.xz
+  #         echo "$PWD/opend-latest-linux-x86_64/bin" >> $GITHUB_PATH
+  #     - name: Get pico-sdk 
+  #       run: git clone --recursive --depth=1 -b 2.0.0 https://github.com/raspberrypi/pico-sdk.git
+  #     - name: CMake Configure 
+  #       run: DC=ldc2 PICO_SDK_PATH=$PWD/pico-sdk PICO_PLATFORM=${{ matrix.platform }} cmake -B build -DCMAKE_BUILD_TYPE=Release
+  #     - name: CMake Build 
+  #       run: cmake --build build/ --parallel
